# hardpy

./: .flake8  .gitignore  .ruff.toml  404.html  Dockerfile  README.md  conda.yaml  index.html  mkdocs.yml  pyproject.toml  requirements-doc.txt  requirements.txt  sitemap.xml
.devcontainer/: .mise.toml  Dockerfile  couchdb.ini  devcontainer.json  docker-compose.yaml  local.ini  postattach.sh  postcreate.sh
.devcontainer/database/: couchdb.ini
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  docs.yml  github-releases-to-discord.yml  lint.yml  mr.yml  release.yml  test-matrix.yml  test.yml
_includes/: hero.html  landing.css
about/development/: index.html
about/fronted_sync/: index.html
about/frontend_sync/: index.html
changelog/: index.html
docs/: changelog.md  getting_started.md  index.md
docs/_includes/: hero.html  standcloud_cta.html
docs/about/: development.md  fronted_sync.md  frontend_sync.md
docs/documentation/: cli.md  database.md  hardpy_config.md  hardpy_panel.md  index.md  pytest_hardpy.md  stand_cloud.md  structure.md
docs/examples/: attempts.md  automatic_port_allocation.md  chart.md  couchdb_load.md  critical_test.md  db_in_ram.md  dialog_box.md  dialog_box_plot.md  frontend_remote_access.md  hardpy_launch.md  hello_hardpy.md  html_plot.md  index.md  json_storage.md  launch_arguments.md  launching_arguments.md  logging.md  measurement.md  minimal_example.md  minute_parity.md  multiple_configs.md  multiple_stands.md  operator_msg.md  parallel_tests.md  raspberry_launching.md  raspberry_stand.md  skip_test.md  stand_cloud.md  stand_cloud_reader.md  stand_cloud_thirdparty_auth.md  stand_cloud_thirdparty_integration.md  stand_equipment.md  start_arguments.md
docs/features/: features.md
docs/overrides/: main.html
documentation/: index.html
documentation/cli/: index.html
documentation/database/: index.html
documentation/hardpy_config/: index.html
documentation/hardpy_panel/: index.html
documentation/pytest_hardpy/: index.html
documentation/stand_cloud/: index.html
documentation/structure/: index.html
examples/: index.html
examples/attempts/: README.md  conftest.py  docker-compose.yaml  hardpy.toml  index.html  test_1.py  test_2.py
examples/chart/: index.html
examples/couchdb_load/: README.md  conftest.py  docker-compose.yaml  hardpy.toml  index.html  test_1.py  test_2.py
examples/critical_test/: index.html
examples/db_in_ram/: index.html
examples/demo_json_storage/: conftest.py  hardpy.toml  pytest.ini  test_chart_demo.py  test_communication.py  test_voltage.py
examples/dialog_box/: README.md  hardpy.toml  index.html  pytest.ini  test_1_base_box.py  test_2_input_field.py  test_3_choice_control.py  test_4_multiple_steps.py  test_4_send_image.py  test_5_html.py  test_5_multiple_steps.py
examples/dialog_box_plot/: index.html
examples/dialog_box_sizes/: README.md  conftest.py  test_1_base_box.py  test_2_input_field.py  test_3_choice_control.py  test_4_send_image.py  test_5_multiple_steps.py
examples/frontend_database_routing/: README.md  docker-compose.yaml  hardpy.toml  pytest.ini
examples/frontend_remote_access/: index.html
examples/hardpy_launch/: index.html
examples/hello_hardpy/: README.md  hardpy.toml  index.html  pytest.ini  test_simple.py
examples/html_plot/: conftest.py  plot.html  test_plot.py
examples/json_storage/: README.md  conftest.py  hardpy.toml  index.html  test_chart_demo.py  test_communication.py  test_voltage.py
examples/launch_arguments/: index.html
examples/logging/: index.html
examples/measurement/: hardpy.toml  index.html  test_1.py  test_2.py  test_3.py
examples/minimal_example/: README.md  hardpy.toml  index.html
examples/minute_parity/: README.md  conftest.py  driver_example.py  hardpy.toml  index.html  test_1.py  test_2.py  test_3.py
examples/mult_configs/: README.md  config1_pytest.ini  config2_pytest.ini  conftest.py  hardpy.toml  test_1.py  test_2.py  test_3.py
examples/multiple_configs/: README.md  config3_pytest.ini  docker-compose.yaml  hardpy.toml  index.html  pytest.ini  test_2.py  test_3.py
examples/multiple_stands/: index.html
examples/operator_msg/: README.md  conftest.py  hardpy.toml  index.html  test_1.py  test_2_image.py  test_3_html.py  test_simple.py
examples/parallel_tests/: README.md  conftest.py  hardpy.toml  test_simple.py
examples/raspberry/: default.ini  local.ini  script.sh
examples/skip_test/: index.html
examples/stand_cloud/: README.md  conftest.py  driver_example.py  hardpy.toml  index.html  pytest.ini  test_1.py  test_2.py  test_3.py
examples/stand_cloud_integration/: README.md  integration_flow.py
examples/stand_cloud_reader/: index.html
examples/stand_cloud_thirdparty_auth/: README.md  auth_flow.py  index.html  token_update.py
examples/stand_cloud_thirdparty_integration/: index.html
examples/stand_equipment/: index.html
examples/stand_template/: README.md  conftest.py  hardpy.toml  test_1.py  test_2.py
features/features/: index.html
getting_started/: index.html
hardpy/: __init__.py  __main__.py  cli.py  config.py  file_generator.py  hardpy.py  template.py
hardpy/cli/: cli.py  template.py
hardpy/common/: config.py  connection_data.py  singleton.py  stand_cloud_wrapper.py
hardpy/hardpy_panel/: api.py  runner.py
hardpy/pytest_hardpy/: plugin.py  pytest_call.py  pytest_wrapper.py
overrides/: main.html
print_page/: index.html
scripts/: compile_front.sh  hatch_build.py  recompile_front.sh  schema_visualiser.py
search/: search_index.json
template/: hardpy.toml
tests/: conftest.py  pytest.ini  test_dbx_widgets.py  test_dependency.py  test_func.py  test_mark.py  test_status.py  test_translations.py
tests/test_cli/: conftest.py  test_cli.py  test_config.py  test_hardpy_init.py  test_hardpy_run.py  test_port.py  test_template.py
tests/test_cli_and_config/: test_cli.py  test_config.py
tests/test_common/: test_config.py
tests/test_config/: test_config.py
tests/test_dbx_widgets/: test_convert_data.py  test_converting_data.py  test_creating_widgets.py  (+1 more)
(+228 files in other folders)
